--- a/index-pascoa.html
+++ b/index-pascoa.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="//code-sa1.jivosite.com/widget/A19c4XzsMg" async></script>
     <link rel="stylesheet" type="text/css" href="../pascoacrista/css/stylle.css">
     <link rel="icon" href="../pascoacrista/images/cruzes/cruz.png" type="image/icon">
     <title>Páscoa Cristã</title>
@@ -116,9 +115,9 @@ Importante que as reuniões para as comemorações no Domingo de Páscoa sejam r
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334.224016179869!2d-47.87772808550625!3d-15.798336727259763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3b224c1f9a91%3A0x55fbb231e9698d19!2sCatedral%20Metropolitana%20Nossa%20Senhora%20Aparecida!5e1!3m2!1spt-BR!2sbr!4v1617142274672!5m2!1spt-BR!2sbr" width="100%" height="750" style="border:0;" allowfullscreen="" loading="lazy"></iframe>   
     </section>
     <section id="contacts">
-    <form >
+    <form>
         <h1>CONTATOS</h1>
-        <label><label>Nome </label>
+        <label>Nome </label>
         <input type="text" nome="nome" placeholder="Informe seu nome">
         <label>Assunto</label>
         <input type="text" nome="email" placeholder="Assunto a ser abordado">
@@ -136,7 +135,35 @@ Importante que as reuniões para as comemorações no Domingo de Páscoa sejam r
         window.alert('Primeira Avaliação com o tema Páscoa - Dirigido pelo Professor Eliel Cruz !')
     </script>
 <footer>
-      <p>2021- Todos os Direitos Reservados&copy;:: Desenvolvido por <a href="https://www.linkedin.com/in/david-jesus-4a3b01207/" style="text-decoration: none;"><b>David Jesus</b></a></p>
+      <p>2021- Todos os Direitos Reservados&copy;:: Desenvolvido por <a href="https://www.linkedin.com/in/david-jesus-4a3b01207/" style="text-decoration: none;" target="_blank"><b>David Jesus</b></a></p>
 </footer>
 </body>
 </html>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officiis vero corporis mollitia culpa ipsam veniam eos. Repellat, in nobis. Eveniet, earum fugiat aliquid facere provident deleniti fuga quo libero.
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, nesciunt. Temporibus dolores molestiae officia! Aliquid dolorem explicabo atque deserunt ipsa, pariatur corporis tempora laborum quia aperiam perspiciatis facilis asperiores sequi
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis perferendis distinctio a nisi rem, eos vitae sapiente voluptate aliquam! Nemo cupiditate placeat autem aperiam itaque perspiciatis voluptatibus corporis incidunt quam.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod at deserunt, eligendi neque sit, aliquid molestiae ratione veritatis, ullam dolorum expedita tempora non obcaecati impedit ducimus quidem officiis illum quasi
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ipsam at recusandae eveniet in hic quidem numquam odit, explicabo eaque nemo quae nihil laborum voluptatem molestias, asperiores vel a ducimus
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorem omnis nihil quo vitae voluptatum eius sunt laboriosam! Quod odit incidunt reiciendis velit fugiat nesciunt id! Blanditiis dolore ipsa illum
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit maxime tenetur sit itaque animi cumque ullam odio, expedita, mollitia autem doloremque dolorum dignissimos debitis repudiandae molestias. Fugit fugiat autem similique
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime distinctio voluptate non. Enim, molestiae sapiente. Libero, architecto distinctio rem tempore debitis illo minima. Ea ratione repudiandae doloremque, nulla explicabo assumenda
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum maxime, laboriosam odit nulla a velit sapiente harum tempora quidem, fugiat fugit ducimus iusto. Nihil unde facilis inventore iusto fugiat
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate dolorem cumque suscipit a magni doloribus pariatur beatae ut aliquid harum? Nobis exercitationem natus neque quo modi illo iste sit quis
+
+</p> 
+
+<p>
+    Lorem Ipsum
+"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+"Não há ninguém que ame a dor por si só, que a busque e queira tê-la, simplesmente por ser dor..."
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis facilisis leo. In viverra lacus a ante malesuada lobortis. Quisque tincidunt nec turpis ut facilisis. Nunc scelerisque lacinia tortor ac sollicitudin. Curabitur dapibus sapien in nibh accumsan iaculis. Integer lacus tortor, placerat eu venenatis ut, mollis et velit. Mauris sit amet hendrerit erat. Vestibulum porta est quam. Ut placerat lacus purus, ultricies hendrerit nulla mollis quis.
+
+Nam aliquet venenatis tellus. Sed eget sodales augue. Cras volutpat neque tellus, et elementum nulla tristique vel. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed egestas turpis sit amet dapibus rutrum. Nullam in dui viverra, tempor erat eu, aliquam sapien. Cras justo augue, consectetur ac ultrices sit amet, porta eu quam. Sed ut metus vestibulum, luctus ex et, feugiat est.
+
+Nulla tellus augue, scelerisque sit amet nibh sit amet, mattis pulvinar mi. Curabitur eleifend et mi a bibendum. Quisque feugiat consequat urna molestie tincidunt. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus nisl urna, imperdiet sit amet venenatis at, luctus sed magna. Ut ut eleifend est, ut tristique urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque at hendrerit leo, at vehicula tellus. Pellentesque nibh magna, gravida quis maximus facilisis, dapibus ut lacus. Sed eget mattis felis. Integer venenatis nisi nunc, sed sollicitudin ipsum condimentum vitae. Donec auctor at dui ac pretium.
+
+In vel augue quis eros ullamcorper hendrerit. Vivamus et leo semper, vulputate orci eget, rutrum tellus. Nam vitae mi tempor, malesuada leo quis, scelerisque velit. Praesent sit amet magna placerat, blandit nibh at, venenatis nisl. Fusce eros ipsum, cursus id mollis ut, hendrerit scelerisque velit. Suspendisse pellentesque felis ante, viverra vulputate nunc faucibus a. Nam vestibulum ligula vel laoreet blandit. Duis at scelerisque erat. Sed eleifend blandit dui sed iaculis. Nulla sodales semper tempor. Ut efficitur condimentum turpis, a finibus erat hendrerit nec. Maecenas id odio at felis lacinia feugiat nec ut urna. Sed vestibulum leo eu nunc egestas, in pharetra sapien pretium. Donec in hendrerit ex. Nunc eu hendrerit massa. Quisque scelerisque dui ac purus auctor, nec vestibulum neque volutpat.
+
+Nunc eu ipsum suscipit turpis fringilla porttitor non eu justo. Vivamus maximus sodales nunc, a tempus turpis maximus a. Pellentesque id lacus id dui sodales rutrum vitae vitae turpis. Curabitur orci leo, varius id congue eleifend, interdum dignissim massa. Quisque dapibus finibus massa quis fermentum. Suspendisse et augue at purus tempor venenatis. Integer nec lectus mauris. Vestibulum ornare lectus id sapien tempus, vitae consectetur metus congue. Nam convallis consequat nisi, ac eleifend metus ornare quis. Nunc volutpat nisi libero, sagittis ultrices turpis porta nec. 
+</p>
